force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/AcctPlan_Questionnaire_Template__c.object-meta.xml
<CustomObject>
    <label>AcctPlan Questionnaire Template</label>
    <nameField>
        <displayFormat>QT-{000000}</displayFormat>
        <label>AcctPlan Questionnaire Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AcctPlan Questionnaire Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>