force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/Account_Plan_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Page_Name__c</fullName>
    <label>Account Plan Page Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domain I</fullName>
            </value>
            <value>
                <fullName>Domain III</fullName>
            </value>
            <value>
                <fullName>Domain IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>