force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/Answer_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Field_Type__c</fullName>
    <label>Answer Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes or No</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>