force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>