force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/Product_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Label__c</fullName>
    <label>Product Label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Business Click</fullName>
            </value>
            <value>
                <fullName>Liquidity Management</fullName>
            </value>
            <value>
                <fullName>L/G transaction with Government sector</fullName>
            </value>
            <value>
                <fullName>L/G issuing : Aval/Acceptance</fullName>
            </value>
            <value>
                <fullName>L/G issuing : International bank guarantee or Standby L/C</fullName>
            </value>
            <value>
                <fullName>L/G issuing : Shipping guarantee</fullName>
            </value>
            <value>
                <fullName>Request L/G from Buyer</fullName>
            </value>
            <value>
                <fullName>Normal business transaction : Credit risk protection</fullName>
            </value>
            <value>
                <fullName>Normal business transaction : Other revenue/ expenditure</fullName>
            </value>
            <value>
                <fullName>Insurance : Credit life insurance</fullName>
            </value>
            <value>
                <fullName>Insurance : Non credit life insurance</fullName>
            </value>
            <value>
                <fullName>Insurance : Non life insurance</fullName>
            </value>
            <value>
                <fullName>Balance sheet management : Liability management</fullName>
            </value>
            <value>
                <fullName>Balance sheet management : Investment &amp; Capital expenditure plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>