force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/SEQ__c.field-meta.xml
<CustomField>
    <fullName>SEQ__c</fullName>
    <label>SEQ</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>