force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Sub_Domain__c</fullName>
    <label>Sub Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Contingent Liability</fullName>
            </value>
            <value>
                <fullName>Hedging</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>