force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>