force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/fields/Sub_Segment_SEQ__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment_SEQ__c</fullName>
    <label>Sub Segment SEQ</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>