force-app/main/default/objects/AcctPlan_Questionnaire_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Segment__c</columns>
    <columns>Account_Plan_Page_Name__c</columns>
    <columns>Question_TH__c</columns>
    <columns>Opportunity__c</columns>
    <columns>SEQ__c</columns>
    <columns>Answer_Field_Type__c</columns>
    <columns>Sub_Segment_SEQ__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>Product_Label__c</columns>
    <columns>Sub_Domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>